--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,23 +1,10 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "ES6",
-    "lib": [
-      "ES6",
-      "DOM"
-    ],
-    "module": "ESNext",
+    "composite": true,
     "skipLibCheck": true,
+    "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-  }
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["vite.config.ts"]
 }
